working first draft

--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@ body {
 	width: 100%;
 	height: 100%;
 	overflow-x: hidden;
+	font-size: 11pt;
 }
 
 a {
-	color: hotpink;
+	color: indianred;
 	text-decoration: underline;
 }
 
